--- a/package.json
+++ b/package.json
@@ -4,5 +4,32 @@
   "description": "An app that allows users create blog posts",
   "main": "app.js",
   "author": "AbdulRazaq Suleiman",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "argon2": "^0.26.2",
+    "chai": "^4.2.0",
+    "cloudinary": "^1.21.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "esm": "^3.2.25",
+    "express": "^4.17.1",
+    "express-validator": "^6.5.0",
+    "global": "^4.4.0",
+    "helmet": "^3.22.0",
+    "jsonwebtoken": "^8.5.1",
+    "mocha": "^7.1.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "mysql2": "^2.1.0",
+    "randomstring": "^1.1.5",
+    "sinon": "^9.0.2"
+  },
+  "scripts": {
+    "dev": "nodemon -r esm app.js",
+    "start": "node -r esm app.js"
+  },
+  "devDependencies": {
+    "chalk": "^4.0.0"
+  }
 }
