--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "randomstring": "^1.1.5",
-    "sinon": "^9.0.2"
+    "sinon": "^9.0.2",
+    "swagger-ui-express": "^4.1.4"
   },
   "scripts": {
     "dev": "nodemon -r esm app.js",
